Add support for Minecraft 1.8.8 - 1.19.2. Reduce required Java version to Java 8.
Fix small bugs